--- a/homwork3/Css/style.css
+++ b/homwork3/Css/style.css
@@ -42,7 +42,12 @@ body {
     background-color: #464646;
     width: 100%; max-width: 45px; 
   box-shadow: 10px 0 10px -10px #838383 inset, -10px 0 10px -10px #838383 inset;
-  }   
+  } 
+  .button {
+    display: inline-block;
+    width: 45px;
+    height: 20px;   
+    width: 100%; max-width: 45px;
     
 .sidebar {
     margin-top: 40px;
