--- a/homwork3/Css/style.css
+++ b/homwork3/Css/style.css
@@ -48,7 +48,7 @@ body {
     width: 45px;
     height: 20px;   
     width: 100%; max-width: 45px;
-    
+  }
 .sidebar {
     margin-top: 40px;
     margin-right: 50px;
