--- a/homwork3/Css/style.css
+++ b/homwork3/Css/style.css
@@ -24,27 +24,21 @@ body {
     background-image: linear-gradient(#5d5d5d, #464646);
 }
 .upmenu {
-    display: inline;
+    display: inline-block;
     line-height: normal;
     letter-spacing: normal;
-    padding: 10px 43px;
+    padding: 10px 5px;
+    text-align: center;
+    width: 145px;
     color: white;
     font-family: OpenSans-Regular;
     font-size: 15px;
    } 
-   .button {
-    display: inline-block;
-    width: 45px;
-    height: 20px;   
-    width: 100%; max-width: 45px;
-   }
 .upmenu:hover {
     display: inline-block;
-    width: 45px;
-    height: 20px;   
     background-color: #464646;
-    width: 100%; max-width: 45px; 
   box-shadow: 10px 0 10px -10px #838383 inset, -10px 0 10px -10px #838383 inset;
+  cursor: pointer;
   } 
   
   
@@ -71,6 +65,7 @@ body {
 .left:hover {
     padding-left: 35px;
     background-color: #f9f9f9;
+     cursor: pointer;
 }
 
 .foto {
@@ -106,9 +101,11 @@ color: #2c2c2c;
 }
 .bottommenu:hover{
     text-decoration: underline;
+     cursor: pointer;
 }
 .autor:hover{
     text-decoration: none;
+    cursor: default;
 }
 .autor {
     padding:0 5px;
