--- a/homework4/css/style.css
+++ b/homework4/css/style.css
@@ -48,80 +48,195 @@ font-weight: 900;
 line-height: 2;
 
 }
-.flag li{
-float:left;
-position: relative;
-    top: 110px;
-    left: 635px;
-margin-left: 15px;
-overflow: hidden;
-    z-index: 100;}
+
 .text li{
     float: left;
     position: relative;
-    top: 155px;
-    left: 305px;
+    top: 115px;
+    left: 645px;
     margin:0 5px;
+}
+a{
   font-family: "tahoma";
     font-size: 10px;
   color: rgb(18, 138, 167);
-  text-decoration: underline;
+}
+.india{
+    background-image: url(../img/india.png);
+    background-repeat: no-repeat;
+    width: 44px;
+    height: 20px;
+    text-align: center;
+   padding-top: 40px;  
+    position: absolute;
 }
 .nepal{
-    padding:0 0 0 20px
+    background-image: url(../img/nepal.png);
+    background-repeat: no-repeat;
+    width: 44px;
+    height: 20px;
+    text-align: center;
+   padding-top: 40px;  
+    position: absolute;
 }
 .tibet{
- padding:0 18px;  
-    
+ background-image: url(../img/tibet.png);
+    background-repeat: no-repeat;
+    width: 44px;
+    height: 20px;
+    text-align: center;
+   padding-top: 40px;  
+    position: absolute;;  
+}
+.bhutan{
+    background-image: url(../img/bhutan.png);
+    background-repeat: no-repeat;
+    width: 44px;
+    height: 20px;
+    text-align: center;
+   padding-top: 40px;  
+    position: absolute;
 }
 .sri-lanka{
-    padding-left: 8px;  
-}   
+   background-image: url(../img/sri-lanka.png);
+    background-repeat: no-repeat;
+    width: 54px;
+    height: 20px;
+    padding-top: 40px;  
+    position: absolute;  
+} 
+.maldives{
+    background-image: url(../img/maldives.png);
+    background-repeat: no-repeat;
+    width: 44px;
+    height: 20px;
+    text-align: center;
+   padding-top: 40px;  
+    position: absolute;
+}
 .foto{   
     position: relative;
-    margin-top:129px;
+    margin-top:114px;
     margin-left: 6px;
     border-top: 1px solid #128aa7;
-    border-bottom: 1px solid #128aa7;    
+    border-bottom: 1px solid #128aa7;
+    z-index: 5;
 } 
-.panel{
-    height: 30px;
-    width: 1002px;
-    margin-left: 5px;
-    background: #303030;
-    border-bottom: 1px solid #000000;
+.panel{ 
+  margin-left: 5px;
+  margin-right: 3px;    
+  height: 30px;
+  vertical-align: middle;
+  border-bottom: 2px solid black;
+  position: relative;
+  background-color: #303030;
+  z-index:10;    
 }
-.upmenu li{
-    float: left;
-    text-align:center;
-    width: 143px;
-    padding: 5px 0px 0px 0;
-    position: relative;
+.panel li{
+  display: inline-block;
+  width: 131px;
+  text-align: center;
+  vertical-align: middle;
+  color: white;
+  height: 30px;
+  line-height: normal;
+  padding-top: 5px;
+  position: relative;
+  left: 25px;
+  font-family: "tahoma";
+  font-size: 14px;
+}
+.panel li ul{
+  display: none;
+  background-color: #303030;
+  position: absolute;
+  left: 0;
+  top: 21px;
+  width: 150px;
+  z-index:4;
+  border-top:2px solid black;
+  margin-top: 8px;
+  }
+.panel li ul li{
+left: 5px;    
+display: inline-block;
+text-align: left;
+height: 15px;
+}
+.panel li ul li:last-child{
+  margin-bottom: 15px;
+}
+
+.panel li:hover ul{
+  display: block;
+  cursor: pointer;
+}
+.button{
     cursor: pointer;
-    z-index: 10;    
-    color: white;
-    font-family: "tahoma";
-    font-size: 14px;
 }
-ul li ul {  display: none;
-    position: absolute;
-    left: 0px;
-    top: 30px;
-    height: auto;
-    margin: 0 15px;
-    padding-left: 5px;
-    width: 130px;
-    background: #303030;
-    border-top: 1px solid #000000;
+.panel{ 
+  margin-left: 5px;
+  margin-right: 3px;    
+  height: 30px;
+  vertical-align: middle;
+  border-bottom: 2px solid black;
+  position: relative;
+  background-color: #303030;
+  z-index:10;    
 }
-ul li ul li {
-    float: none;
-display: block;
- text-align-last: left;
-      
+.panel li{
+  display: inline-block;
+  width: 131px;
+  text-align: center;
+  vertical-align: middle;
+  color: white;
+  height: 30px;
+  line-height: normal;
+  padding-top: 5px;
+  position: relative;
+  left: 25px;
+  font-family: "tahoma";
+  font-size: 14px;
 }
-ul li:hover ul {
-display: block;
+.panel li ul{
+  display: none;
+  background-color: #303030;
+  position: absolute;
+  left: 0;
+  top: 21px;
+  width: 150px;
+  z-index:4;
+  border-top:2px solid black;
+  margin-top: 8px;
+  }
+.panel li ul li{
+left: 5px;    
+display: inline-block;
+text-align: left;
+height: 15px;
+}
+.panel li ul li:last-child{
+  margin-bottom: 15px;
+}
+
+.panel li:hover ul{
+  display: block;
+  cursor: pointer;
+}
+.button{
+    cursor: pointer;
+}
+.upmenu{
+  cursor: pointer;
+  background-color: #333333;
+  display: inline-block;
+  vertical-align: -3px;
+  border: 5px solid transparent;
+  border-top: 5px solid white;
+  width: 0;
+ 
+}
+ 
 }
 .menu {
     background-image: url(../img/fon2.png);
