--- a/homework4/css/style.css
+++ b/homework4/css/style.css
@@ -64,7 +64,7 @@ a {
 .india{
     background-image: url(../img/india.png);
     background-repeat: no-repeat;
-    background-position:top center;
+    background-position: top center;
     width: 44px;
     height: 20px;
     text-align: center;
@@ -74,7 +74,7 @@ a {
 .nepal{
     background-image: url(../img/nepal.png);
     background-repeat: no-repeat;
-    background-position:top center;
+    background-position: top center;
     width: 44px;
     height: 20px;
     text-align: center;
@@ -84,7 +84,7 @@ a {
 .tibet{
  background-image: url(../img/tibet.png);
     background-repeat: no-repeat;
-    background-position:top center;
+    background-position: top center;
     width: 44px;
     height: 20px;
     text-align: center;
@@ -94,7 +94,7 @@ a {
 .bhutan{
     background-image: url(../img/bhutan.png);
     background-repeat: no-repeat;
-    background-position:top center;
+    background-position: top center;
     width: 44px;
     height: 20px;
     text-align: center;
@@ -104,7 +104,7 @@ a {
 .sri-lanka{
    background-image: url(../img/sri-lanka.png);
     background-repeat: no-repeat;
-    background-position:top center;
+    background-position: 50% 0;
     width: 54px;
     height: 20px;
     padding-top: 40px;  
@@ -113,7 +113,7 @@ a {
 .maldives{
     background-image: url(../img/maldives.png);
     background-repeat: no-repeat;
-    background-position:top center;
+    background-position: top center;
     width: 44px;
     height: 20px;
     text-align: center;
