--- a/homeworktable/css/stilet.css
+++ b/homeworktable/css/stilet.css
@@ -1,9 +1,19 @@
+body{width: 100%;
+    height: 100%;
+    background-color: gray;
+
+}
+div {
+    padding-top:5% ;
+    padding-bottom: 5%;
 table{
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    padding-top: 10%;
+    padding-bottom: 10%;
     border-collapse: collapse;
 }
 tr{
+    height: 55px;
     margin: 0;
     padding: 0;
 }
@@ -11,13 +21,13 @@ tr{
 td{
     margin: 0;
     padding: 0;
-    width: 60px;
-    height: 40px;
+    width: 55px;
     border: 10px solid #2b1e0d;
+    background-color: white;
 }
 .red{
-    width: 300px;
-    height: 250px;
+    width: 260px;
+    height: 260px;
     background-color: #ff592b;
 }
 .yellow{
@@ -30,14 +40,14 @@ td{
     background-color: #064785;
 }
 .top{
-    border-top: none;
+    border-top: 1px solid #2b1e0d;
 }
 .left{
-    border-left: none;
+    border-left: 1px solid #2b1e0d;
 }
 .right{
-    border-right: none;
+    border-right: 1px solid #2b1e0d;
 }
 .botton{
-    border-bottom: none;
+    border-bottom: 1px solid #2b1e0d;
 }
