--- a/homework6/css/style.css
+++ b/homework6/css/style.css
@@ -345,7 +345,7 @@ h3:before {
     overflow: hidden;
 }
 
-figcaption {
+.wheel {
     
     width: 170px;
     height: 205px;
@@ -355,7 +355,7 @@ figcaption {
    
     
 } 
-figure{
+.im{
     width: 135px;
     height: 125px;
     margin-left: 20px;
@@ -599,7 +599,7 @@ input[type=checkbox]{
     
     
     
-    ]
+
     
     
 
