--- a/homework78/css/style.css
+++ b/homework78/css/style.css
@@ -153,7 +153,7 @@ header{
     position: absolute;
     background-color: rgba(61, 48, 69, 0.8);
     border-radius: 15px;
-    left: 20%;     /*left: 115px;*/
+    left: 20%;    
     top: 29px;
     width:60%;
     text-align: center;
@@ -181,8 +181,9 @@ header{
 @media (max-width: 320px){
   .header-slider .header-slider-polosa{
       margin-top: 18px;
-      margin-bottom: 1760px;
+      margin-bottom: 160px;
       height: 245px;
+      position: relative;
     }
 }
 /*321*/
