--- a/homework78/css/style.css
+++ b/homework78/css/style.css
@@ -1157,7 +1157,7 @@ position: relative;
  
   
 /*----320------*/
-@media only screen and (min-width: 320px) and (max-width: 479px){
+@media only screen and (max-width: 479px){
 .wrapper {
 margin: 0 auto;
 max-width: 320px;
