--- a/homework78/css/style.css
+++ b/homework78/css/style.css
@@ -275,7 +275,6 @@ border: 1px solid #aaa;
 }
 .slider-block{
     margin: 0 auto;
-    width: 960px;
     position: relative;
     
   }
@@ -582,7 +581,6 @@ max-width: 768px;
     padding-top: 70px;
       
     float: none;
-/*    -border: 12px solid black;*/
   }
   .menu-item{
   display: inline-block;
@@ -629,11 +627,11 @@ max-width: 768px;
     background-image: url(../img/phone.png);
     height: 415px;
     width: 280px;
+    float: right;
     position: absolute;
-    right: 255px;
-    top: -19px;
+    right: 62px;
+    top: -20px;
     display: block;
-    text-align: right;
   }
 
     .cirkl_1{
