--- a/homework78/css/style.css
+++ b/homework78/css/style.css
@@ -637,7 +637,7 @@ max-width: 768px;
     top:135px;
     }
   .purple-block-all{
-    width: 768px;
+    width: auto;
      height: 340px;
       margin: 0 auto;
   }
